--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -134,8 +134,8 @@ $hoverColor: #d6f1ff;
 }
 
 .calendarContainer .dayWrapper button.selected {
-  background-color: #337ab7;
-  color: #ffffff;
+  background-color: #337ab7 !important;
+  color: #ffffff !important;
 }
 
 .calendarContainer .dayWrapper:not(.currentMonth) button {
@@ -214,8 +214,8 @@ $hoverColor: #d6f1ff;
 .calendarContainer .selected button:hover :not([disabled]),
 .calendarContainer .selected button:active,
 .calendarContainer .selected button:focus {
-  background-color: $selectedColor;
-  color: #ffffff;
+  background-color: $selectedColor !important;
+  color: #ffffff !important;
 }
 
 .calendarContainer.jalaali {
@@ -462,6 +462,24 @@ li.rc-time-picker-panel-select-option-disabled:hover {
 .today {
   button {
     border: 3px solid #4285f4 !important;
+  }
+}
+
+.highlighted {
+  background-color: #e7f1f2;
+  &.rangestart {
+    background: linear-gradient(90deg, #e7f1f2 50%, white 50%,);
+    // button {
+    //   background: white !important;
+    //   border: 1px solid #4285f4 !important;
+    // }
+  }
+  &.rangeend {
+    background: linear-gradient(90deg, white 50%, #e7f1f2 50%);
+    button {
+      background: white !important;
+      border: 1px solid #4285f4 !important;
+    }
   }
 }
 
