--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -129,8 +129,8 @@
 }
 
 .calendarContainer .dayWrapper button.selected {
-  background-color: #337ab7 !important;
-  color: #ffffff !important;
+  background-color: #337ab7;
+  color: #ffffff;
 }
 
 .calendarContainer .dayWrapper:not(.currentMonth) button {
@@ -211,8 +211,8 @@
 .calendarContainer .selected button:hover :not([disabled]),
 .calendarContainer .selected button:active,
 .calendarContainer .selected button:focus {
-  background-color: #4285f4 !important;
-  color: #ffffff !important;
+  background-color: #4285f4;
+  color: #ffffff;
 }
 
 .calendarContainer.jalaali {
@@ -469,7 +469,7 @@ li.rc-time-picker-panel-select-option-disabled:hover {
 }
 
 .today button {
-  border: 3px solid #4285f4 !important;
+  border: 3px solid #4285f4;
 }
 
 .highlighted {
